--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
+							<version>10.3</version>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -219,12 +220,18 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-checkstyle-plugin</artifactId>
 					</plugin>
-
+					<plugin>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs-maven-plugin</artifactId>
+					</plugin>
 				</plugins>
 			</build>
 			<reporting>
 				<plugins>
-
+					<plugin>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs-maven-plugin</artifactId>
+					</plugin>
 				</plugins>
 			</reporting>
 		</profile>
@@ -232,7 +239,10 @@
 			<id>coverage</id>
 			<build>
 				<plugins>
-
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
